@@ -242,10 +242,5 @@ restricted to years in the range 1900 through 2099.
 To avoid this portability mess, new programs should use
 .I strftime\^
 instead.
-.PP
-Avoid using out-of-range values with
-.I mktime
-when setting up lunch with promptness sticklers in Riyadh.
-.\" %W%
 .\" This file is in the public domain, so clarified as of
 .\" 2009-05-17 by Arthur David Olson.
